Muitas coisas de front-end

--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -39,7 +39,7 @@
           <button
             class="side-option-button"
             routerLinkActive="side-option-active"
-            routerLink="profile">Perfil
+            (click)="onProfileCall()">Perfil
           </button>
           <button
             class="side-option-button"
