--- a/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
+++ b/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
@@ -1,25 +1,51 @@
+<div class="header">
+  <button (click)="onBackCall()" class="small-button">
+    <mat-icon class="small-icon">arrow_back</mat-icon>
+  </button>
+  <h2 class="title">Criar Registo</h2>
+</div>
+
 <div class="content">
-  <h3>Insira os detalhes do registo.</h3>
-  <form (ngSubmit)="onSubmit()" class="example-form">
-    <mat-form-field>
-      <mat-label>Título</mat-label>
-      <input matInput type="text" name="title" [(ngModel)]="title">
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <mat-label>Adicione uma descrição</mat-label>
-      <textarea matInput [(ngModel)]="description" name="description"  required></textarea>
-    </mat-form-field>
-    <br>
-    <button mat-flat-button color="accent" class="button" type="submit">Submeter Registo</button>
-  </form>
-  <br>
-  <input type="file" (change)="onFileUpload($event)" #fileInput style="display:none">
-  <button (click)="fileInput.click()">Adicionar Ficheiro</button>
-  <ul>
-    <li *ngFor="let entry of files.entries()">
-      {{ entry[0] }}
-      <button (click)="onRemoveFile(entry[0])">Remover</button>
-    </li>
-  </ul>
+  <div class="left-section">
+    <h3>Insira os detalhes do registo.</h3>
+    <form (ngSubmit)="onSubmit()" class="example-form">
+      <mat-form-field>
+        <mat-label>Título</mat-label>
+        <input matInput type="text" name="title" [(ngModel)]="title">
+      </mat-form-field>
+      <br>
+      <mat-form-field>
+        <mat-label>Adicione uma descrição</mat-label>
+        <textarea matInput [(ngModel)]="description" name="description" required></textarea>
+      </mat-form-field>
+      <br>
+      <input type="file" (change)="onFileUpload($event)" #fileInput style="display:none">
+      <button type="button" class="add-button" (click)="fileInput.click()">Adicionar Ficheiro</button>
+    </form>
+    <button mat-flat-button color="accent" class="submit-button" type="submit">Submeter Registo</button>
+  </div>
+
+  <div class="right-section">
+    <h3 style="text-align: center">Ficheiros Adicionados</h3>
+    <div class="table-container">
+      <table mat-table [dataSource]="filesArray()" class="table">
+        <ng-container matColumnDef="files">
+          <th mat-header-cell *matHeaderCellDef> Email</th>
+          <td mat-cell *matCellDef="let element"> {{ element.email }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> Remover</th>
+          <td mat-cell *matCellDef="let element">
+            <button class="remove-button" mat-fab (click)="onRemoveFile(element.key)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </div>
 </div>
