Log-entry-details + log-entry-edit (Without files)

--- a/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
+++ b/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
@@ -1,1 +1,13 @@
-<p>log-entry-details works!</p>
+<div>
+  <button (click)="onBackCall()" class="small-button">
+    <mat-icon class="small-icon">arrow_back</mat-icon>
+  </button>
+  <h2>Ocorrência</h2>
+</div>
+<p>Autor: {{log?.author?.name}}</p>
+<p>Title: {{log?.title}}  |  Estado: {{log?.state}}</p>
+<p>Observação: {{log?.content}}</p>
+<p>Criado no dia: {{log?.createdAt}}</p>
+<p>Modificado no dia: {{log?.modifiedAt}}</p>
+
+<button *ngIf="isEditable()" (click)="editCall()">Editar Log</button>
