--- a/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
+++ b/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
@@ -30,8 +30,8 @@
     <div class="table-container">
       <table mat-table [dataSource]="filesArray()" class="table">
         <ng-container matColumnDef="files">
-          <th mat-header-cell *matHeaderCellDef> Email</th>
-          <td mat-cell *matCellDef="let element"> {{ element.email }}</td>
+          <th mat-header-cell *matHeaderCellDef> Files</th>
+          <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
         </ng-container>
 
         <ng-container matColumnDef="delete">
