Some pages redone

--- a/code/js/front-end/src/app/create-work/create-work.component.css
+++ b/code/js/front-end/src/app/create-work/create-work.component.css
@@ -1,11 +1,16 @@
 
+.header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .small-button {
   width: 2%;
   height: auto;
   margin: 10px;
   background-color: white;
   border: none;
-  vertical-align: center;
 }
 
 .small-icon {
