--- a/code/js/front-end/src/app/create-work/create-work.component.html
+++ b/code/js/front-end/src/app/create-work/create-work.component.html
@@ -1,8 +1,8 @@
-<div>
+<div class="header">
   <button (click)="onBackCall()" class="small-button">
     <mat-icon class="small-icon">arrow_back</mat-icon>
   </button>
-  <h2>Criar Obra</h2>
+  <h2 class="title">Criar Obra</h2>
 </div>
 <form (ngSubmit)="create()">
   <div class="input">
