--- a/code/js/front-end/src/app/work-details/work-details.component.css
+++ b/code/js/front-end/src/app/work-details/work-details.component.css
@@ -34,7 +34,7 @@
 .sidebar-menu {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 10px;
 }
 
 .sidebar-menu-item {
@@ -99,7 +99,6 @@
   flex-grow: 1;
   overflow-y: auto; /* Enable vertical scrolling if necessary */
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
 }
@@ -233,7 +232,7 @@ strong {
   padding: 10px;
   background-color: #f5f5f5;
   border-radius: 5px;
-  border: 1px solid #ddd;
+  border: 1px solid #FF7A00;
   margin: 5px;
 }
 
@@ -270,3 +269,4 @@ strong {
   margin-left: 10px;
   width: 30%; /* Adjust the width of the input */
 }
+
