BugFixes + Batch Files for building and running the application

--- a/code/js/front-end/src/app/edit-profile/edit-profile.component.html
+++ b/code/js/front-end/src/app/edit-profile/edit-profile.component.html
@@ -51,7 +51,7 @@
         </div>
         <div>
           <p>Telefone</p>
-          <input *ngIf="user" placeholder="Número de telefone" [(ngModel)]="user.email">
+          <input *ngIf="user" placeholder="Número de telefone" [(ngModel)]="user.phone">
         </div>
       </div>
       <div>
