BugFix Work-Details Page

--- a/code/js/front-end/src/app/work-details/work-details.component.html
+++ b/code/js/front-end/src/app/work-details/work-details.component.html
@@ -164,7 +164,7 @@
       <mat-tab label="Equipa">
         <div class="log-top-bar">
           <button mat-fab color="primary" aria-label="Example icon button with a delete icon" class="log-button"
-                  (click)="createNewEntry()">
+                  (click)="onInviteClick()">
             <mat-icon>add</mat-icon>
           </button>
         </div>
